--- a/charts/consul/templates/server-config-configmap.yaml
+++ b/charts/consul/templates/server-config-configmap.yaml
@@ -26,6 +26,7 @@ data:
       "ports": {
         "serf_lan": {{ .Values.server.ports.serflan.port }}
       },
+      "recursors": {{ .Values.global.recursors | toJson }},
       "retry_join": ["{{template "consul.fullname" . }}-server.{{ .Release.Namespace }}.svc:{{ .Values.server.ports.serflan.port }}"],
       "server": true
     }
