--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,8 @@ linters:
     #- goconst
     #- prealloc
     #- unparam
+  disable:
+    - typecheck
 
 issues:
   # Disable the default exclude list so that all excludes are explicitly
