--- a/.github/workflows/reusable-golangci-lint.yml
+++ b/.github/workflows/reusable-golangci-lint.yml
@@ -20,10 +20,15 @@ jobs:
     steps:      
       - name: Checkout code
         uses: actions/checkout@v2
-      
-      - name: golangci-lint-${{inputs.directory}}
-        uses: golangci/golangci-lint-action@v2
+
+      - name: Setup go
+        uses: actions/setup-go@v2
         with:
-          version: v1.41.1
+          go-version: ${{ inputs.go-version }}
+     
+      - name: golangci-lint-${{inputs.directory}}
+        uses: golangci/golangci-lint-action@v3.1.0
+        with:
+          version: v1.45.2
           working-directory: ${{inputs.directory}}
           args: ${{inputs.args}}
