--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -490,11 +490,11 @@ global:
     # If you are setting `global.federation.enabled` to true and are in a secondary datacenter,
     # set `k8sAuthMethodHost` to the address of the Kubernetes API server of the secondary datacenter.
     # This address must be reachable from the Consul servers in the primary datacenter.
-    # This authmethod will be used to provision ACL tokens for Consul components and is different
+    # This auth method will be used to provision ACL tokens for Consul components and is different
     # from the one used by the Consul Service Mesh.
-    # Please see the Kubernetes Auth Method documentation (https://consul.io/docs/acl/auth-methods/kubernetes).
+    # Please see the [Kubernetes Auth Method documentation](https://consul.io/docs/acl/auth-methods/kubernetes).
     #
-    # You could retrieve this value from your `kubeconfig` by running:
+    # You can retrieve this value from your `kubeconfig` by running:
     #
     # ```shell-session
     # $ kubectl config view \
