Respect client placement reqs for fed secret job (#1164)
* Respect client placement reqs for fed secret job

The job requires access to a consul client so it must respect the placement
requirements for the consul client pods.

* changelog

* Update CHANGELOG.md

--- a/charts/consul/templates/create-federation-secret-job.yaml
+++ b/charts/consul/templates/create-federation-secret-job.yaml
@@ -31,6 +31,17 @@ spec:
     spec:
       restartPolicy: Never
       serviceAccountName: {{ template "consul.fullname" . }}-create-federation-secret
+      {{- if .Values.client.tolerations }}
+      tolerations:
+        {{ tpl .Values.client.tolerations . | nindent 8 | trim }}
+      {{- end }}
+      {{- if .Values.client.priorityClassName }}
+      priorityClassName: {{ .Values.client.priorityClassName | quote }}
+      {{- end }}
+      {{- if .Values.client.nodeSelector }}
+      nodeSelector:
+        {{ tpl .Values.client.nodeSelector . | indent 8 | trim }}
+      {{- end }}
       volumes:
         {{- /* We can assume tls is enabled because there is a check in server-statefulset
           that requires tls to be enabled if federation is enabled. */}}
